<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout tools:context="com.sky.SkyFleetDriver.MainActivity" android:padding="10dp" android:id="@+id/home_fragment" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">


    -<ScrollView android:layout_height="match_parent" android:layout_width="match_parent">


    -<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/current_location"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorPrimary"
        android:visibility="gone"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/your_current_location"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/refresh"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:paddingStart="5dp"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_refresh"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/current_locatn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/current_location" android:lineSpacingExtra="5dp"/>

    <TextView
        android:id="@+id/txt_vehicle_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:text="@string/attached_vehicle" app:layout_constraintTop_toBottomOf="@+id/current_locatn"/>

    <TextView android:id="@+id/txt_vehicl" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginStart="20dp" app:layout_constraintLeft_toLeftOf="parent" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/txt_vehicle_title"/>


    -<LinearLayout android:id="@+id/linear_status" android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="parent" android:layout_marginTop="25dp" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_vehicl">

    <TextView android:id="@+id/txt_status" android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintLeft_toLeftOf="parent" android:textColor="@color/black" android:textSize="15sp" android:text="@string/currrent_status" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/Loading"/>

    <TextView android:id="@+id/status" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="@color/colorGreen" android:textSize="15sp" app:layout_constraintTop_toBottomOf="@+id/Loading" app:layout_constraintLeft_toRightOf="@+id/txt_status" android:fontFamily="@font/coresans_cr_medium"/>

</LinearLayout>


    -<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/btns" android:layout_height="wrap_content" android:layout_width="match_parent" android:visibility="gone" android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/linear_status">


    -<RelativeLayout android:id="@+id/navigate" android:layout_height="wrap_content" android:layout_width="100dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp" android:layout_marginLeft="50dp" android:background="@drawable/button_round_red">

    <ImageView android:id="@+id/panic_icon" android:layout_height="25dp" android:layout_width="25dp" android:src="@drawable/navigation_icon" android:layout_margin="5dp" android:layout_centerVertical="true"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginStart="2dp" android:textColor="@color/white" android:textSize="12sp" android:layout_marginLeft="2dp" android:text="@string/navigate" android:layout_centerVertical="true" android:layout_toEndOf="@+id/panic_icon" android:textStyle="bold" android:layout_toRightOf="@+id/panic_icon" android:layout_centerHorizontal="true"/>

</RelativeLayout>


    -<RelativeLayout android:id="@+id/call" android:layout_height="wrap_content" android:layout_width="100dp" app:layout_constraintTop_toTopOf="parent" android:background="@drawable/button_round_green" app:layout_constraintStart_toEndOf="@+id/navigate" app:layout_constraintEnd_toEndOf="parent">

    <ImageView android:id="@+id/money_icon" android:layout_height="25dp" android:layout_width="25dp" android:src="@drawable/call" android:layout_margin="5dp" android:layout_centerVertical="true"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginStart="3dp" android:textColor="@color/white" android:textSize="12sp" android:layout_marginLeft="3dp" android:text="@string/call" android:layout_centerVertical="true" android:layout_toEndOf="@+id/money_icon" android:textStyle="bold" android:layout_toRightOf="@+id/money_icon" android:layout_centerHorizontal="true"/>

</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


    -<LinearLayout android:id="@+id/linear_job" android:layout_height="wrap_content" android:layout_width="match_parent" android:visibility="visible" app:layout_constraintTop_toBottomOf="@+id/btns" android:background="?android:attr/selectableItemBackground" tools:layout_editor_absoluteY="10dp" tools:layout_editor_absoluteX="10dp" android:orientation="vertical">

    <View android:id="@+id/line" android:layout_height="1dp" android:layout_width="match_parent" android:visibility="gone" android:layout_marginTop="10dp" android:background="@color/colorGrey" android:layout_margin="10dp"/>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal" android:layout_weight="1">


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="0dp" android:orientation="vertical" android:layout_weight="1">

    <TextView android:padding="5dp" android:id="@+id/txt_oderid" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="@color/black" android:textSize="12sp" android:text=""/>

    <TextView android:padding="5dp" android:id="@+id/txt_dateandstatus" android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintStart_toStartOf="parent" android:textColor="@color/colorBalck" android:text=""/>

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="100dp" android:orientation="vertical" android:layout_gravity="center">

    <TextView android:id="@+id/kms" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="@color/colorPrimary" android:textSize="15dp" android:text="" android:layout_gravity="center" android:gravity="center"/>

</LinearLayout>


    -<LinearLayout android:layout_height="wrap_content" android:layout_width="80dp" android:orientation="vertical">

    <TextView android:padding="5dp" android:id="@+id/txt_pricetotla" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="@color/colorGreen" android:textSize="16sp" android:text="" android:textStyle="bold" android:layout_gravity="center" android:gravity="center"/>

    <TextView android:padding="5dp" android:id="@+id/txt_type" android:layout_height="wrap_content" android:layout_width="wrap_content" android:textColor="@color/colorBalck" android:textSize="14sp" android:text="" android:layout_gravity="center" android:gravity="center"/>

</LinearLayout>

</LinearLayout>


    -<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:visibility="visible"
    android:orientation="vertical"
    android:layout_weight="2"
    android:animationCache="true"
    android:animateLayoutChanges="true">


    -<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp">

    <TextView
        android:padding="2dp"
        android:id="@+id/pick"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/colorGreen"
        android:textSize="17dp"
        android:text=""
        android:drawablePadding="8dp"/>

    <TextView
        android:padding="3dp"
        android:id="@+id/Pickup_address"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:text=""
        android:textStyle="bold"/>

</LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/via_rv"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        tools:listitem="@layout/item_via_points"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>


    -<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp">

    <TextView
        android:padding="2dp"
        android:id="@+id/drop"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="17dp"
        android:text=""
        android:drawablePadding="8dp"/>

    <TextView
        android:padding="3dp"
        android:id="@+id/drop_address"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:text="" android:textStyle="bold"/>

</LinearLayout>

    <!-- app:spb_currentStateNumber="two"-->


    <com.kofigyan.stateprogressbar.StateProgressBar
        android:id="@+id/time_view"
        android:layout_height="55dp"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        app:spb_stateTextSize="12dp"
        app:spb_stateNumberForegroundColor="#eeeeee"
        app:spb_stateNumberBackgroundColor="#808080"
        app:spb_stateForegroundColor="#3DBA42"
        app:spb_stateDescriptionSize="12dp"
        app:spb_stateDescriptionColor="#808080"
        app:spb_stateBackgroundColor="#BDBDBD"
        app:spb_maxStateNumber="three"
        app:spb_currentStateDescriptionColor="#3DBA42"
        app:spb_checkStateCompleted="true"
        app:spb_animateToCurrentProgressState="true"/>

</LinearLayout>

    <View android:id="@+id/lines" android:layout_height="1dp" android:layout_width="match_parent" android:visibility="gone" android:layout_marginTop="10dp" android:background="@color/colorGrey" android:layout_margin="10dp"/>

</LinearLayout>


    -<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/acceptRejectbtns" android:layout_height="wrap_content" android:layout_width="match_parent" android:visibility="gone" android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/linear_job">


    -<RelativeLayout android:id="@+id/reject" android:layout_height="wrap_content" android:layout_width="100dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp" android:layout_marginLeft="50dp" android:background="@drawable/button_round_red">

    <!-- <ImageView-->


    <!-- android:id="@+id/panic_icon1"-->


    <!-- android:layout_width="25dp"-->


    <!-- android:layout_height="25dp"-->


    <!-- android:layout_centerVertical="true"-->


    <!-- android:layout_margin="5dp" />-->


    <TextView android:layout_height="25dp" android:layout_width="wrap_content" android:layout_marginStart="2dp" android:textColor="@color/white" android:textSize="14sp" android:layout_marginLeft="2dp" android:text="Reject" android:layout_margin="5dp" android:layout_centerVertical="true" android:textStyle="bold" android:layout_centerHorizontal="true" android:gravity="center"/>

</RelativeLayout>


    -<RelativeLayout android:id="@+id/accept" android:layout_height="wrap_content" android:layout_width="100dp" app:layout_constraintTop_toTopOf="parent" android:background="@drawable/button_round_green" app:layout_constraintStart_toEndOf="@+id/reject" app:layout_constraintEnd_toEndOf="parent">

    <!-- <ImageView-->


    <!-- android:id="@+id/money_icon1"-->


    <!-- android:layout_width="25dp"-->


    <!-- android:layout_height="25dp"-->


    <!-- android:layout_centerVertical="true"-->


    <!-- android:layout_margin="5dp" />-->


    <TextView android:layout_height="25dp" android:layout_width="wrap_content" android:layout_marginStart="3dp" android:textColor="@color/white" android:textSize="14sp" android:layout_marginLeft="3dp" android:text="Accept" android:layout_margin="5dp" android:layout_centerVertical="true" android:textStyle="bold" android:layout_centerHorizontal="true" android:gravity="center"/>

</RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <TextView android:padding="10dp" android:id="@+id/txt_nodata" android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintLeft_toLeftOf="parent" android:textColor="@color/colorPrimary" android:visibility="gone" android:textSize="18sp" android:layout_marginTop="130dp" android:text="@string/no_jobs_found_at_the_moment" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@+id/linear_status" android:gravity="center" app:layout_constraintBottom_toBottomOf="parent"/>


    -<androidx.constraintlayout.widget.ConstraintLayout android:padding="5dp" android:id="@+id/lvl_dilevry" android:layout_height="70dp" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" android:visibility="visible" android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/acceptRejectbtns" android:layout_gravity="bottom" android:gravity="center" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0">


    -<LinearLayout android:layout_height="42dp" android:layout_width="280dp" app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent" android:visibility="visible" app:layout_constraintEnd_toEndOf="parent" android:orientation="vertical" android:layout_gravity="center" android:gravity="center" app:layout_constraintBottom_toBottomOf="parent" android:elevation="5dp">

    <TextView android:id="@+id/pickupbtn" android:layout_height="42dp" android:layout_width="match_parent" android:textColor="@color/colorWhite" android:visibility="gone" android:text="Pick Up" android:background="@drawable/button_round" android:textStyle="bold" android:layout_gravity="center" android:gravity="center"/>

    <TextView android:id="@+id/position_change1" android:layout_height="42dp" android:layout_width="match_parent" android:textColor="@color/colorWhite" android:visibility="gone" android:text="Destination" android:background="@drawable/greenbackground" android:textStyle="bold" android:layout_gravity="center" android:gravity="center"/>

    <TextView android:id="@+id/position_change2" android:layout_height="42dp" android:layout_width="match_parent" android:textColor="@color/colorWhite" android:visibility="gone" android:text="Complete Point 1" android:background="@drawable/greenbackground" android:textStyle="bold" android:layout_gravity="center" android:gravity="center"/>

    <TextView android:id="@+id/position_change3" android:layout_height="42dp" android:layout_width="match_parent" android:textColor="@color/colorWhite" android:visibility="gone" android:text="Complete Point 2" android:background="@drawable/greenbackground" android:textStyle="bold" android:layout_gravity="center" android:gravity="center"/>

    <TextView
        android:id="@+id/position_change4"
        android:layout_height="42dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        android:text="Complete Point 3"
        android:background="@drawable/greenbackground"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/position_change5"
        android:layout_height="42dp"
        android:layout_width="match_parent"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        android:text="Complete Point 4"
        android:background="@drawable/greenbackground"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"/>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>